@@ -120,11 +120,14 @@ Release 0.9.1 - unreleased
 
   BUG FIXES
 
+    TAJO-1249: Tajo should check if a file format given in DDL is supported.
+    (DaeMyung Kang via hyunsik)
+ 
     TAJO-1250: RawFileAppender occasionally causes BufferOverflowException. 
     (jinho)
 
-    TAJO-1259: A title in catalog configuration document is different from others. 
-    (Jongyoung Park via hyunsik)
+    TAJO-1259: A title in catalog configuration document is different from 
+    others. (Jongyoung Park via hyunsik)
 
     TAJO-1232: Implicit groupby queries with LIMIT lead to wrong results. 
     (jihoon)
